# aoc-2020

./: README.md  pyproject.toml
aoc_2020/: _utils.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py
tests/: test_aoc_2020.py
