[tool.poetry]
name = "aoc-2020"
version = "0.1.0"
description = "Advent of Code 2020"
authors = ["Emanuel Ferm <emanuel@eferm.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.19.4"
requests = "^2.25.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
